Src\Changes.txt
Add new items to top.
(This summarizes all changes to all files under Src, including Src\Languages.)

2006-04-20 Kimmo
 TODO: [ 1469363 ] Need image for aborted status in folder compare
  Icon from Tim
  Src: DirView.cpp Merge.rc resource.h
  Src/res new file: aborted.ico
  Src/Languages/*: Merge*.rc

2006-04-18 Kimmo
 PATCH: [ 1471835 ] Fix setting filename in folder-compare report dialog
  Src: DirCmpReportDlg.cpp DirCmpReportDlg.h

2006-04-18 Takashi
 PATCH: [ 1445996 ] Fix wrong PgDown scrolling after mousescroll(2)
  Src/editlib: ccrystaltextview2.cpp

2006-04-12 WinMerge experimental release 2.5.3.6 (cvs)

2006-04-12 Kimmo
 PATCH: [ 1468691 ] Center folder compare status dialog to mainframe
  Src: DirView.cpp
 PaTCH: [ 1468783 ] Fix disabled scrollbars after loading files
  Src: MergeDoc.cpp MergeEditView.cpp MergeEditView.h

2006-04-11 Kimmo
 PATCH: [ 1467872 ] Fix diff navigation for first-line of diff
  Src: MergeEditView.cpp
 PATCH: [ 1443719 ] xml output reports
  Submitted by Perry, modified by me
  Src: DirCmpReport.cpp DirCmpReport.h DirCmpReportDlg.cpp DirCmpReportDlg.h
   DirView.cpp DirView.h Merge.dsp Merge.rc resource.h
  Src new file: DirReportTypes.h

2006-04-10 Kimmo
 PATCH: [ 1467305 ] Beep when long compare is ready
  Src: DirView.cpp DirView.h

2006-04-09 Tim
 BUG: [ 1461375 ] Forgot old patch #981526 for sgml.cpp, sh.cpp and tcl.cpp?
  Src\editlib: sgml.cpp sh.cpp tcl.cpp

2006-04-09 Kimmo
 BUG: [ 1383719 ] ShellExtension resources opening in IDE fails
  Fix from Sdottaka
  ShellExtension/Languages/*.rc
 BUG: [ 1465893 ] Compile error with VC6 (SuperComboBox.cpp)
  Fix from Gal Hammer
  Src/Common: SuperComboBox.cpp

2006-04-06 Kimmo
 BUG: [ 1463137 ] MergeArgs.h is empty file?
  Remove MergeArgs.h
  Src: Merge.dsp
  Src removed file: MergeArgs.h

2006-04-05 Tim
 PATCH: [ 1461896 ] Syntax highlighting of HTML for ASP not complete
  Src\editlib: asp.cpp

2006-04-05 Kimmo